[metadata]
name = crystal-dashboard
summary = Horizon Plugin for Crystal
description-file = README.rst
author = AST Team
author-email = gerard.paris@urv.cat, josep.sampe@urv.cat
home-page = http://ast-deim.urv.cat/
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages = crystal_dashboard
namespace_packages = crystal_dashboard

[global]
setup-hooks = pbr.hooks.setup_hook

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[nosetests]
where = test
verbosity = 2
detailed-errors = 1
cover-package = crystal_dashboard